# game.libretro.snes9x

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/snes9x/: CMakeLists.txt  libretro-snes9x-0001_fix-cross-compile.patch  snes9x.txt
game.libretro.snes9x/: addon.xml  addon.xml.in
game.libretro.snes9x/resources/: settings.xml
game.libretro.snes9x/resources/language/English/: strings.po
gameclient.snes9x/: addon.xml
